--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ nav {
     background: #6F38C5;
     height: 50px;
     padding: 0 5%;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
    
 }
 nav .logo {
@@ -63,7 +67,7 @@ nav ul {
 }
 .container {
     max-width: 1092px;
-    margin: 100px auto 30px auto;
+    margin: 150px auto 30px auto;
     width: 90%
 }
 h1 {
