--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,18 @@ nav .logo {
     font-weight: 800;
     animation: fromTop 1.2s;
 }
+nav button {
+    background: transparent;
+    border: none;
+    color: #ADDDD0;
+    font-size: 36px;
+    position: absolute;
+    right: 10px;
+    display: none;
+}
+button:focus ~ nav ul {
+    height: 250px;
+}
 nav ul li {
     transition: all .05s;
 }
@@ -226,18 +238,21 @@ main section p span {
     border-radius: 8px;
 }
 .contact i {
-    color: rgb(21, 241, 21);
+    color:rgb(40, 240, 40);
     font-size: 30px;
 }
 .contact p {
     margin: 10px 0;
-    line-height: 50px;
+    line-height: 30px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
 .box-text {
     margin-top: 30px;
-}
-.box-text p i {
-    margin-right: 5px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 footer p {
     margin: 0;
@@ -293,4 +308,7 @@ footer p {
         opacity: 1;
         transform: translateY(0);
     }
+}
+@media (max-width:700px) {
+     
 }
