--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,9 @@ footer p {
     }
 }
 @media (max-width:800px) {
+    .container {
+        min-width: 250px;
+    }
     .menu-icon {
         display: block;
         z-index: 10;
@@ -336,8 +339,12 @@ footer p {
     nav ul li a {
         font-size: 1.3rem;
     }
+    .contact {
+        padding: 0 15px;
+    }
     .contact p {
         font-size: 0.7rem;
+        display: inline-block;
     }
 }
 @media (min-width:801px) and (max-width:999px) {
