--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,29 @@ footer p {
     transform: scale(1.2);
     cursor: pointer;
 }
+/* Barra de Rolagem */
+
+
+/* Fundo que corre */
+::-webkit-scrollbar-track {
+    background-color: #87A2FB;
+}
+/* Fundo que corre */
+
+::-webkit-scrollbar {
+    width: 13px;
+    background: #F4F4F4;
+}
+
+/* Linha que desce */
+::-webkit-scrollbar-thumb {
+    background: #6F38C5;
+    border-radius: 15px;
+}
+/* Linha que desce*/
+
+
+/* Barra de Rolagem */
 @keyframes fromTop {
     from {
         opacity: 0;
